# medicata

./: .gitignore  PRD.md  README.md  deployment_guide.md
landing/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
landing-page/: index.html  package-lock.json  package.json
landing-page/src/: App.css  App.tsx  index.css
landing/public/: .htaccess  sw.js
landing/src/: App.css  App.tsx  index.css  main.tsx
landing/src/api/: auth.ts  dashboard.ts  extractEntities.ts  googleDriveUpload.ts  job.ts  pdfToText.ts  profile.ts  proposal.ts  testimonials.ts
landing/src/assets/: f  (+8 more)
mobile-app/: app.json  package-lock.json  package.json  tsconfig.json
mobile-app/app/: +not-found.tsx  _layout.tsx  analytics.tsx  forgot-password.tsx  login.tsx  medi-chat.tsx  notifications.tsx  wallet.tsx
mobile-app/components/: Step4ContactInfo.tsx  haptic-tab.tsx
mobile-app/context/: OnboardingContext.tsx
mobile-app/hooks/: useWebSocket.ts
mobile-app/services/: api.ts  notifications.ts
server/: Cargo.toml  UserJouney.md  test_api.sh
server/db/: schema.sql
server/src/: auth_utils.rs  config.rs  db.rs  email.rs  error.rs  main.rs  state.rs  websocket.rs
server/src/handlers/: ai_chat.rs  auth.rs  consultation.rs  discovery.rs  drugs.rs  message.rs  mod.rs  notification.rs  order.rs  payments.rs  prescription.rs  profile.rs  review.rs  schedule.rs  settings.rs  wallet.rs
server/src/middleware/: auth.rs
server/src/models/: consultation.rs  doctor.rs  message.rs  mod.rs  notification.rs  order.rs  prescription.rs  profile.rs  review.rs  user.rs
(+203 files in other folders)
